# aadil

./: .gitignore  CMakeLists.txt  README.md  generateMultiRoverExperts.cpp  parse.pl  parse_angle.pl  t2.vec  t4.angle  t4.vec  tmp.txt
Results/Multirover_experts/0/: NNs.txt  POIs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/1/: NNs.txt  POIs.txt  config.yaml  results.txt  trajectories.txt  trajectory_choice.txt  trajectory_choice.txt27381  trajectory_choice.txt35447  trajectory_choice.txt62408  trajectory_choice.txt89165  trajectory_choice.txt97697
Results/Multirover_experts/10/: NNs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/11/: NNs.txt  POIs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/12/: NNs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/1234/: POIs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/13/: NNs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/14/: NNs.txt  POIs.txt  results.txt  trajectories.txt
Results/Multirover_experts/16/: results.txt
Results/Multirover_experts/17/: results.txt
Results/Multirover_experts/1709111631/: config.yaml  results.txt
Results/Multirover_experts/1709111641/: NNs.txt  config.yaml  results.txt  trajectories.txt  trajectory_choice.txt
Results/Multirover_experts/1709111948/: config.yaml
Results/Multirover_experts/1709111950/: NNs.txt  POIs.txt  config.yaml  results.txt  trajectories.txt  trajectory_choice.txt
Results/Multirover_experts/2/: NNs.txt  POIs.txt  results.txt  trajectories.txt
Results/Multirover_experts/21/: config.yaml
Results/Multirover_experts/3/: NNs.txt  config.yaml  results.txt  trajectories.txt
Results/Multirover_experts/4/: NNs.txt  results.txt  trajectories.txt
Results/Multirover_experts/6/: NNs.txt  results.txt  trajectories.txt
include/: AlignmentAgent.h  AlignmentGuidedAgent.h  AlignmentLearningAgent.h  CMakeLists.txt  SingleRover.h  Statistics.h  alignment.h  alignments.h  experimentUtil.h  experimentalSetup.h  yaml_constants.h
include/Agents/: Agent.cpp  Agent.h  AlignmentAgent.cpp  AlignmentAgent.h  CMakeLists.txt  Controlled.cpp  Controlled.h  ExploringAgent.cpp  ExploringAgent.h  NeuralRover.cpp  NeuralRover.h  OnlyPOIRover.cpp  OnlyPOIRover.h  RandomAgent.cpp  RandomAgent.h  Rover.cpp  Rover.h  TeamFormingAgent.cpp  TeamFormingAgent.h
include/Domains/: CMakeLists.txt  D.cpp  D.h  Env.cpp  Env.h  ExpTarget.cpp  ExpTarget.h  G.cpp  G.h  MultiRover.cpp  MultiRover.h  Objective.h  OnePoi.cpp  OnePoi.h  State.h  Target.cpp  Target.h  TeamForming.cpp  TeamForming.h  TeamObjective.cpp  TeamObjective.h
include/Learning/: MAPElitesRover.h  NeuralNet.cpp  NeuralNet.h  NeuroEvo.cpp  NeuroEvo.h
input/: config.yaml  coupled.nets  coupledNoBias.nets  expnets.nets  farpoi.nets  onepoi.nets  teamforming2.nets  teamforming3.nets  teams2.nets  teams3.nets  teams4.nets
results/: 159437862_alignment_data  alignment_learning_data  all_D_data  just_onepoi  just_team4  just_teamforming2  training_curves_poi_objs  transfer_data
results/training/: control_d.data  control_g.data  control_g_2.data  curve.data  farpoi.data  onepoi.data
src/: AlignmentAgent.cpp  AlignmentGuidedAgent.cpp  AlignmentLearningAgent.cpp  MAPElites.cpp  MAPElitesRover.cpp  MatrixTypes.cpp  MultiRover.cpp  NeuralNet.cpp  NeuroEvo.cpp  POMDP.cpp  POMDPEnvironment.cpp  POMDPPolicy.cpp  Rover.cpp  SingleRover.cpp  Statistics.cpp  Target.cpp  UtilFunctions.cpp  Utilities.cpp  alignments.cpp  count_index.py  experiment.cpp  experimentSetup.cpp  experimentUtil.cpp  generateMultiRoverExperts.cpp
test/: alignment_test.cpp  dummy_test.cpp
test/Agents/: agent_test.cpp  team_forming_test.cpp
test/Domains/: target_test.cpp
